sidebar-style.css
:root {
    /**/
    --background-color: #c0b2b2;
    --primary-color: #fff;
    --secondary-color: #d4af37;

    --top-banner-height: 20vh;

    --hyperlink-color: #2e51a2;
}

#mal-sidebar {
    position: fixed;
    left: 0;
    height: 100vh;
    padding: 10px;
}

h2 {
    color: var(--hyperlink-color);
    font-size: 25px;
    word-wrap: break-word;
}

h1 {
    color: var(--hyperlink-color);
    font-size: 12px;
}

p1 {
    font-weight: bold;
    font-size: 15px;
    word-wrap: break-word;
}

p2 {
    font-weight: bolder;
    font-size: 20px;
}

#closeButton {
    color: black;
}

